<resources>
    <string name="app_name">Android IMS</string>

    <!-- Strings for MainActivity -->
    <string name="WelcomeText">Welcome to Android IMS!</string>
    <string name="PleaseSignInText">Please sign in to continue</string>
    <string name="UsernameLabel">Username:</string>
    <string name="Username">Username</string>
    <string name="PasswordLabel">Password:</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="Missing">Missing %1$s</string>

    <!-- Strings for DashboardActivity -->
    <string name="DashboardWelcome">Welcome, %1$s!</string>

    <!-- Strings for APIEndpointConfigActivity -->
    <string name="EndpointLabel">API Endpoint:</string>
    <string name="Endpoint">API Endpoint</string>
    <string name="SignInScriptLabel">Sign In Script:</string>
    <string name="SignInScript">Sign In Script</string>
    <string name="AddUserScriptLabel">Add User Script:</string>
    <string name="AddUserScript">Add User Script</string>
    <string name="GetUserListScriptLabel">User List Script:</string>
    <string name="GetUserListScript">User List Script</string>
    <string name="UpdateUserScriptLabel">Update User Script:</string>
    <string name="UpdateUserScript">Update User Script</string>
    <string name="DeleteUserScriptLabel">Delete User Script:</string>
    <string name="DeleteUserScript">Delete User Script</string>
    <string name="RelativeWarning">Scripts are Relative to API Endpoint, No slashes</string>
    <string name="SaveAPI">Save API Information</string>

    <!-- Strings for Menus -->
    <string name="SignOut">Sign Out</string>
    <string name="Back">Back</string>

    <!-- Strings for Standard Functions -->
    <string name="Standard">Standard Functions</string>
    <string name="CheckInventory">Check Inventory</string>
    <string name="CheckOut">Check Out - Borrow</string>
    <string name="CheckIn">Check In - Return</string>
    <string name="AddInventory">Add to Inventory - Non-Borrow</string>
    <string name="RemoveInventory">Remove from Inventory - Non-Borrow</string>

    <!-- Strings for Admin Functions -->
    <string name="Admin">Administrative Functions</string>
    <string name="ConfigureAPI">Change API Settings</string>
    <string name="AddUser">Add New User</string>
    <string name="EditUser">Edit User</string>
    <string name="DeleteUser">Delete User</string>
    <string name="AddInventoryItem">Add Inventory Item</string>
    <string name="EditInventoryItem">Edit Inventory Item</string>
    <string name="DeleteInventoryItem">Delete Inventory Item</string>

    <!-- Strings for Adding and Editing Users -->
    <string name="FirstNameLabel">First Name:</string>
    <string name="FirstName">First Name</string>
    <string name="LastNameLabel">Last Name:</string>
    <string name="LastName">Last Name</string>
    <string name="AccessLabel">Access Type:</string>
    <string-array name="Access">
        <item>Standard User</item>
        <item>Administrative User</item>
    </string-array>
    <string name="Save">Save Changes</string>
    <string name="SelectUser">Select User</string>

    <!-- Strings for Dialogs -->
    <string name="Confirm">Confirm Delete</string>
    <string name="ConfirmDeleteUser">Are you sure you want to delete the user %1$s?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>

</resources>