<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserFunctionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btCheckInventory"
            android:text="@string/CheckInventory"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/AddInventory"
            android:id="@+id/btAddInventory"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/RemoveInventory"
            android:id="@+id/btRemoveInventory"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>